haproxy/mtls/app1/app-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    haproxy.org/check: "enabled"
    haproxy.org/forwarded-for: "enabled"
    haproxy.org/load-balance: "roundrobin"
  labels:
    app: app1
  name: app1
  namespace: app1
spec:
  ports:
  - name: app1-port
    port: 80
    targetPort: 8080
  selector:
    app: app1
